--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="css/signin.css" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="favorite.png" type="image/x-icon">
     <meta name="theme-color" content="#2196F3">
     <style>
