--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Custom styles for this template -->
     <link href="css/signin.css" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="favorite.png" type="image/x-icon">
+    <link rel="shortcut icon" href="PWA-Kegiatan-KKLP/favorite.png" type="image/x-icon">
     <meta name="theme-color" content="#2196F3">
     <style>
       .bd-placeholder-img {
