--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
       }
     </style>
-    <base href="/">
+    <base href="PWA-Kegiatan-KKLP/">
   </head>
   <body class="text-center" onload="periksaLogin();">
     <form class="form-signin" action="/kklp/login" method="POST">
