--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body class="text-center" onload="periksaLogin();">
-    <form class="form-signin" action="/kklp/login" method="POST">
+    <form class="form-signin" action="/PWA-Kegiatan-KKLP/login" method="POST">
       <img class="mb-4" src="fa-user.png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Silahkan Login</h1>
       <input type="hidden" name="login">
