--- a/laporan.html
+++ b/laporan.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible"  content="ie=edge">
   <meta name="theme-color"            content="#2196F3">
   <title>Daftar Laporan</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="stylesheet"    href="css/bootstrap.min.css">
   <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.18.0/ui/trumbowyg.min.css">
   <link rel="shortcut icon" href="favorite.png" type="image/x-icon">
