--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet"    href="css/bootstrap.min.css">
   <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.18.0/ui/trumbowyg.min.css">
   <link rel="stylesheet"    href="css/signin.css">
+  <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" href="favorite.png" type="image/x-icon">
   <style>
     .modal-body{
