--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="favorite.png" type="image/x-icon">
     <meta name="theme-color" content="#2196F3">
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="apple-touch-icon" href="apple.png">
     <meta name="description" content="Website Ini berguna Untuk membuat laporan KKLP">
     <style>
       .bd-placeholder-img {
