--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
   <body class="text-center" onload="periksaLogin();">
     <form class="form-signin" action="/PWA-Kegiatan-KKLP/login" method="POST">
       <img class="mb-4" src="fa-user.png" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Silahkan Login</h1>
+      <h1 class="h3 mb-3 font-weight-normal">Masukkan Nama Anda</h1>
       <input type="hidden" name="login">
       <label for="inputEmail" class="sr-only">Username</label>
       <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Daftar</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Masuk</button>
       <p class="mt-5 mb-3 text-muted">&copy; KKLP Pelayanan Masyarakat 2019</p>
     </form>
   
