--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <label for="inputEmail" class="sr-only">Username</label>
       <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required autofocus>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Masuk</button>
-      <p class="mt-5 mb-3 text-muted">&copy; KKLP Pelayanan Masyarakat 2019 - 2020</p>
+      <p class="mt-5 mb-3 text-muted">&copy; KKLP 2019 - 2020</p>
     </form>
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
