--- a/laporan.html
+++ b/laporan.html
@@ -38,7 +38,7 @@
 </head>
 <body style="text-align: center;">
     <div class="container">
-      Daftar Laporan
+      <h4 class="m-4">Daftar Laporan</h4>
       <div id="data">
         
       </div>
