--- a/menu.html
+++ b/menu.html
@@ -52,9 +52,10 @@
     <!-- Tombol Menu -->
     <button class="btn btn-lg btn-primary btn-block" type="button" data-toggle="modal" data-target="#TambahLaporan">Buat Laporan</button>
     <a class="btn btn-lg btn-primary btn-block" href="laporan.html">Daftar Laporan</a>
+    <a class="btn btn-lg btn-primary btn-block" href="switch.html">Ganti Akun</a>
     <!-- Tombol Menu -->
 
-    <p class="mt-5 mb-3 text-muted">&copy; KKLP Pelayanan Masyarakat 2019</p>
+    <p class="mt-5 mb-3 text-muted">&copy; KKLP 2020</p>
   </form>
 
   <!-- Modal Tambah Laporan -->
