--- a/switch.html
+++ b/switch.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Laporan KKLP · XIXVFS</title>
+    <title>Switch Akun KKLP · XIXVFS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="css/signin.css" rel="stylesheet">
@@ -29,7 +29,7 @@
       }
     </style>
   </head>
-  <body class="text-center" onload="periksaLogin();">
+  <body class="text-center">
     <form class="form-signin" action="/PWA-Kegiatan-KKLP/login" method="POST">
       <img class="mb-4" src="fa-user.png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Masukkan Nama Anda</h1>
@@ -43,19 +43,26 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-    <script>
-      function getCookie(name) {
-        var value = "; " + document.cookie;
-        var parts = value.split("; " + name + "=");
-        if (parts.length == 2) return parts.pop().split(";").shift();
-      }
-      
-      function periksaLogin() {
-        var username = getCookie("username");
-        if(username !== undefined)
-          window.location.href="menu.html";
-      }
-    </script>
   </body>
+  <script>
+
+    const gantiakun = document.querySelector('form[class="form-signin"]');
+    gantiakun.addEventListener('submit', e => {
+      e.preventDefault();
+      const fmdata = new FormData(gantiakun);
+      let username = fmdata.get('username');
+      setCookie("username",username,365);
+    })
+
+    function setCookie(cname,cvalue,exdays) {
+      var d = new Date();
+      d.setTime(d.getTime() + (exdays*24*60*60*1000));
+      var expires = d.toGMTString();
+      var curCookie = cname + "=" + cvalue + 
+        "; expires=" + expires + 
+        "; path=" + "/";
+      document.cookie = curCookie;
+      window.history.go(-1);
+    }
+  </script>
 </html>
